--- a/_posts/设计练习：宠物领养程序.md
+++ b/_posts/设计练习：宠物领养程序.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      Design Exercise: Pet Adoption
-subtitle:   WWDC 2018 Keynote 全记录
+subtitle:   如何快速出设计一套App
 date:       2017.12.12 
 author:     CH
 header-img: img/post-bg-cook.jpg
